use nested declarations

--- a/sass_scss/5-nested_child.scss
+++ b/sass_scss/5-nested_child.scss
@@ -3,7 +3,9 @@ $text-red: #FF0000;
 
 body {
     color: $text-color;
-   .red:first-child {
-    color: $text-red;
+   .red{
+    &:first-child {
+        color: $text-red;
+    }
    }
 }
