--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,6 +1,8 @@
+$text-color: #FF0000;
+$text-hover: #00FF00;
 button {
-    color: #FF0000;
+    color: $text-color;
     &:hover {
-        color: #00FF00;
+        color: $text-hover;
     }
 }
