--- a/sass_scss/7-nested_deeper.scss
+++ b/sass_scss/7-nested_deeper.scss
@@ -6,7 +6,7 @@ body {
     font-size: $base-font;
     h1{
         font-size: $header-font;
-        .smaller {
+        &.smaller {
             font-size: $small-header-font;
         }
     }
